--- a/src/2-snackbar.html
+++ b/src/2-snackbar.html
@@ -18,6 +18,27 @@
   <body>
     <p><a class="index-link back" href="./index.html">Go back</a></p>
 
+    <form class="form">
+      <label class="labelS">
+        Delay (ms)
+        <input class="input-delay" type="number" name="delay" required />
+      </label>
+
+      <fieldset class="fieldset">
+        <legend>State</legend>
+        <label>
+          <input type="radio" name="state" value="fulfilled" required />
+          Fulfilled
+        </label>
+        <label>
+          <input type="radio" name="state" value="rejected" required />
+          Rejected
+        </label>
+      </fieldset>
+
+      <button class="button-create" type="submit">Create notification</button>
+    </form>
+
     <script type="module" src="./js/2-snackbar.js"></script>
   </body>
 </html>
